Fixed Issue with Countdown becoming too small

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   background-color: #1f1f1f
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root > div {
+  height: 100%;
 }
+
